corrected variable name

--- a/Cards-In-Hand.html
+++ b/Cards-In-Hand.html
@@ -129,7 +129,7 @@
 			handDiv.appendChild(div);
 
 			if(index > 0) {
-				div.style.left = ((document.getElementById('' + (id - 1)).offsetLeft || 0) + 20) + 'px';
+				div.style.left = ((document.getElementById('' + (index - 1)).offsetLeft || 0) + 20) + 'px';
 			}
 
 		}
